--- a/1-survey-form/styles.css
+++ b/1-survey-form/styles.css
@@ -1,6 +1,7 @@
 body {
 	width: clamp(250px, 40%, 400px);
 	margin: 1rem auto;
+	font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 header {
