--- a/2-tribute-page/styles.css
+++ b/2-tribute-page/styles.css
@@ -1,11 +1,16 @@
 body {
-	width: clamp(250px, 40%, 600px);
-	/* margin: 1rem auto; */
-	font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+	width: clamp(250px, 70%, 1200px);
+	margin: 1rem auto;
+	font-family: "Space Grotesk", Verdana, sans-serif;
 }
 
+/* main {
+	margin: 0 auto;
+} */
+
+/* img element should be centered within its parent element */
 figure {
-	text-align: center;
+	/* text-align: center; */
 }
 
 /* #image should use max-width and height properties to resize relative to the width of its parent element, 
