--- a/2-tribute-page/styles.css
+++ b/2-tribute-page/styles.css
@@ -8,9 +8,24 @@ body {
 	margin: 0 auto;
 } */
 
+.font-small {
+	font-size: small;
+}
+
+.header {
+	text-align: center;
+}
+.header h1 {
+	font-size: xx-large;
+}
+.header p {
+		font-style: italic;
+		font-size: large;
+	}
+
 /* img element should be centered within its parent element */
 figure {
-	/* text-align: center; */
+	text-align: center;
 }
 
 /* #image should use max-width and height properties to resize relative to the width of its parent element, 
@@ -20,4 +35,19 @@ without exceeding its original size */
 	max-width: 100%;
 	/* img will stretch to fit its parent */
 	height: auto;
+}
+
+.content h2 {
+	font-size: large;
+	text-align: center;
+}
+
+.entry {
+	display: flex;
+	column-gap: 1rem;
+}
+
+.footer {
+	margin: 2rem;
+	text-align: center;
 }
