--- a/2-tribute-page/styles.css
+++ b/2-tribute-page/styles.css
@@ -45,6 +45,14 @@ without exceeding its original size */
 .entry {
 	display: flex;
 	column-gap: 1rem;
+	margin-top: 0.5rem;
+	transition: all 200ms;
+}
+.entry:hover {
+	font-size: large;
+	background-color: #d5d4b7;
+	padding-top: 1rem;
+	padding-bottom: 1rem; 
 }
 
 .footer {
