--- a/2-tribute-page/styles.css
+++ b/2-tribute-page/styles.css
@@ -31,6 +31,7 @@ figure {
 /* #image should use max-width and height properties to resize relative to the width of its parent element, 
 without exceeding its original size */
 #image {
+	display: block;
 	/* img will not exceed its original size */
 	max-width: 100%;
 	/* img will stretch to fit its parent */
