--- a/3-technical-documentation-page/styles.css
+++ b/3-technical-documentation-page/styles.css
@@ -1,2 +1,32 @@
-
 /* Your Technical Documentation project should use at least one media query.  */
+:root {
+	--background-color: #FFCAB1;
+	--nav-background-color: #FF9D70;
+	--link-background-color: #F54E00;
+	--font-color: #1E2019;
+}
+
+body {
+	font-family: Verdana, serif;
+	font-size: 16px;
+	background-color: var(--background-color);
+	color: var(--font-color);
+}
+
+#navbar {
+	background-color: var(--nav-background-color);
+	
+	header {
+		font-size: 1.875rem;
+		margin: 10px;
+	}
+	
+	.navlink {
+		display: block;
+		color: var(--font-color);
+		
+		&:hover {
+			background-color: var(--link-background-color);
+		}
+	}
+}
