--- a/4-product-landing-page/styles.css
+++ b/4-product-landing-page/styles.css
@@ -1,2 +1,6 @@
 /* your product landing page should have at least one media query */
 /* your product landing page should utilize css flexbox at least once */
+
+/* navbar = 75px tall */
+/* the navbar should always be at the top of the viewport */
+/* logo = 35px x 35px */
