styling info points

--- a/4-product-landing-page/styles.css
+++ b/4-product-landing-page/styles.css
@@ -50,3 +50,11 @@ header {
 	height: 450px;
 	max-width: auto;
 }
+
+.info-point {
+	display: grid;
+	grid-template-columns: auto 1fr;
+	grid-template-areas:
+		"icon header"
+		"icon desc";
+}
