add and style product video

--- a/4-product-landing-page/styles.css
+++ b/4-product-landing-page/styles.css
@@ -66,3 +66,9 @@ header {
 .point-icon {
 	padding-inline: 5vw;
 }
+
+.product-video {
+	display: flex;
+	justify-content: center;
+	margin-block: 1.5rem;
+}
