--- a/4-product-landing-page/styles.css
+++ b/4-product-landing-page/styles.css
@@ -6,7 +6,8 @@
 /* logo = 35px x 35px */
 :root {
 	--nav-bg: #ffc5c9;
-	--body-bg: #ffeaec;
+	--body-bg: #fff3f4;
+	--primary: #fa858d;
 }
 
 * {
@@ -32,12 +33,14 @@ header {
 	align-items: center;
 	position: sticky;
 	top: 0;
+	border-radius: 0 0 5px 5px;
 }
 
 .logo-wrapper {
 	display: flex;
 	align-items: center;
 	margin-left: 1rem;
+	gap: 0.5rem;
 }
 
 .header-title {
@@ -96,6 +99,7 @@ header {
 	max-width: auto; */
 	height: auto;
 	width: 60%;
+	border-radius: 12vw 5vw;
 }
 
 .info-point {
@@ -120,10 +124,54 @@ header {
 	margin-block: 1.5rem;
 }
 
+iframe#video {
+	border-radius: 20px;
+}
+
 .cta {
-	border: 1px solid black;
-	max-width: fit-content;
+	border: 3px solid var(--nav-bg);
+	width: clamp(200px, 50vw, 600px);
 	margin: 75px auto 0;
+	padding: 2rem;
+	text-align: center;
+	line-height: 1.5;
+	border-radius: 5px;
+}
+
+.cta-title {
+	background-color: var(--nav-bg);
+	/* box-sizing: border-box; */
+	display: inline-block;
+	border-radius: 5px;
+	padding: 5px;
+	font-size: 1.5rem;
+	padding-inline: 1rem;
+}
+
+.cta-desc {
+	font-size: 12px;
+}
+
+#form {
+	display: flex;
+	flex-direction: column;
+	gap: 1rem;
+	align-items: center;
+}
+
+#email {
+	text-align: center;
+	width: 40ch;
+	border: none;
+	border-radius: 5px;
+	padding-block: 0.5rem;
+}
+
+#submit {
+	padding: 0.5rem 0.7rem;
+	background-color: var(--primary);
+	border-radius: 10px;
+	border: 5px double black;
 }
 
 footer {
@@ -131,4 +179,5 @@ footer {
 	font-size: 10px;
 	padding: 10px 50px;
 	text-align: end;
+	border-radius: 5px 5px 0 0;
 }
